crates/lang/tests/ui/contract/fail/event-too-many-topics-anonymous.stderr
error[E0277]: the trait bound `EventTopics<4_usize>: RespectTopicLimit<2_usize>` is not satisfied
  --> tests/ui/contract/fail/event-too-many-topics-anonymous.rs:26:5
   |
26 | /     pub struct Event {
27 | |         #[ink(topic)]
28 | |         arg_1: i8,
29 | |         #[ink(topic)]
...  |
34 | |         arg_4: i32,
35 | |     }
   | |_____^ the trait `RespectTopicLimit<2_usize>` is not implemented for `EventTopics<4_usize>`
   |
   = help: the following implementations were found:
             <EventTopics<4_usize> as RespectTopicLimit<10_usize>>
             <EventTopics<4_usize> as RespectTopicLimit<11_usize>>
             <EventTopics<4_usize> as RespectTopicLimit<12_usize>>
             <EventTopics<4_usize> as RespectTopicLimit<4_usize>>
           and 87 others
note: required by a bound in `EventRespectsTopicLimit`
  --> src/codegen/event/topics.rs
   |
   |     <Event as EventLenTopics>::LenTopics: RespectTopicLimit<LEN_MAX_TOPICS>,
   |                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `EventRespectsTopicLimit`
